<resources>
    <string name="app_name">calculadora</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_4">4</string>
    <string name="_Multiplicacao">*</string>
    <string name="_3">3</string>
    <string name="_0">0</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="_7">7</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_Subtracao">-</string>
    <string name="_Divisao">/</string>
    <string name="_Porcentagem">%</string>
    <string name="_Potencia">^</string>
    <string name="_Soma">+</string>
    <string name="_Ponto">.</string>
    <string name="_Igual">=</string>
    <string name="_C">C</string>
    <string name="x">x</string>
</resources>
