<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtResultado"
        android:layout_width="398dp"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnUm"
        android:layout_width="94dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:onClick="clicar"
        android:text="@string/_1"
        app:layout_constraintEnd_toStartOf="@+id/btnDois"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtResultado" />

    <Button
        android:id="@+id/btnDois"
        android:layout_width="94dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:onClick="clicar"
        android:text="@string/_2"
        app:layout_constraintEnd_toStartOf="@+id/btnTres"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnUm"
        app:layout_constraintTop_toBottomOf="@+id/txtResultado" />

    <Button
        android:id="@+id/btnTres"
        android:layout_width="92dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:onClick="clicar"
        android:text="@string/_3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnDois"
        app:layout_constraintTop_toBottomOf="@+id/txtResultado" />

    <Button
        android:id="@+id/btnQuatro"
        android:layout_width="94dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:onClick="clicar"
        android:text="@string/_4"
        app:layout_constraintEnd_toStartOf="@+id/btnCinco"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnUm" />

    <Button
        android:id="@+id/btnCinco"
        android:layout_width="94dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:onClick="clicar"
        android:text="@string/_5"
        app:layout_constraintEnd_toStartOf="@+id/btnSeis"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnQuatro"
        app:layout_constraintTop_toBottomOf="@+id/btnDois" />

    <Button
        android:id="@+id/btnSeis"
        android:layout_width="92dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:onClick="clicar"
        android:text="@string/_6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnCinco"
        app:layout_constraintTop_toBottomOf="@+id/btnTres" />

    <Button
        android:id="@+id/btnSete"
        android:layout_width="94dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:onClick="clicar"
        android:text="@string/_7"
        app:layout_constraintEnd_toStartOf="@+id/btnOito"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnQuatro" />

    <Button
        android:id="@+id/btnOito"
        android:layout_width="94dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:onClick="clicar"
        android:text="@string/_8"
        app:layout_constraintEnd_toStartOf="@+id/btnNove"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnSete"
        app:layout_constraintTop_toBottomOf="@+id/btnCinco" />

    <Button
        android:id="@+id/btnNove"
        android:layout_width="92dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:onClick="clicar"
        android:text="@string/_9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnOito"
        app:layout_constraintTop_toBottomOf="@+id/btnSeis" />

    <Button
        android:id="@+id/btnZero"
        android:layout_width="94dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:onClick="clicar"
        android:text="@string/_0"
        app:layout_constraintEnd_toStartOf="@+id/btnDivisao"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnSubtracao"
        app:layout_constraintTop_toBottomOf="@+id/btnOito" />

    <Button
        android:id="@+id/btnSubtracao"
        android:layout_width="94dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:onClick="clicar"
        android:text="@string/_Subtracao"
        app:layout_constraintEnd_toStartOf="@+id/btnZero"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSete" />

    <Button
        android:id="@+id/btnDivisao"
        android:layout_width="92dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:onClick="clicar"
        android:text="@string/_Divisao"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnZero"
        app:layout_constraintTop_toBottomOf="@+id/btnNove" />

    <Button
        android:id="@+id/btnPorcentagem"
        android:layout_width="94dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:onClick="clicar"
        android:text="@string/_Porcentagem"
        app:layout_constraintEnd_toStartOf="@+id/btnPotencia"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSubtracao" />

    <Button
        android:id="@+id/btnPotencia"
        android:layout_width="94dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:onClick="clicar"
        android:text="@string/_Potencia"
        app:layout_constraintEnd_toStartOf="@+id/btnMultiplicacao"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnPorcentagem"
        app:layout_constraintTop_toBottomOf="@+id/btnZero" />

    <Button
        android:id="@+id/btnMultiplicacao"
        android:layout_width="92dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:onClick="clicar"
        android:text="@string/x"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnPotencia"
        app:layout_constraintTop_toBottomOf="@+id/btnDivisao" />

    <Button
        android:id="@+id/btnSoma"
        android:layout_width="94dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:onClick="clicar"
        android:text="@string/_Soma"
        app:layout_constraintEnd_toStartOf="@+id/btnPonto"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnPorcentagem" />

    <Button
        android:id="@+id/btnPonto"
        android:layout_width="94dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:onClick="clicar"
        android:text="@string/_Ponto"
        app:layout_constraintEnd_toStartOf="@+id/btnIgual"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnSoma"
        app:layout_constraintTop_toBottomOf="@+id/btnPotencia" />

    <Button
        android:id="@+id/btnIgual"
        android:layout_width="94dp"
        android:layout_height="100dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:onClick="clicar"
        android:text="@string/_Igual"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnPonto"
        app:layout_constraintTop_toBottomOf="@+id/btnMultiplicacao" />

    <Button
        android:id="@+id/btnLimpar"
        android:layout_width="222dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:onClick="clicar"
        android:text="@string/_C"
        app:layout_constraintEnd_toStartOf="@+id/btnIgual"
        app:layout_constraintHorizontal_bias="0.442"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSoma" />

</androidx.constraintlayout.widget.ConstraintLayout>